@@ -1,6 +1,7 @@
 Card Maker Version History
 --------------------------
 1.1.0.0
+- Border render on exports is now controlled per layout instead of at the application level.
 - Updated Color dialog to allow typing/pasting of hex values.
 - Added ability to export with only crosses in the corners with layouts
 - Changed border functionality on export to apply if both border is enabled on the layout and border export is enabled in the general settings
